# nn-rocketgrowth-inventory

./: .gitignore  CLAUDE.md  logs-deccatree3-nn-rocketgrowth-inventory-main-app-app.py-2026-04-22T05_17_47.641Z.txt  logs-deccatree3-nn-rocketgrowth-inventory-main-app-app.py-2026-04-22T05_23_13.882Z.txt  logs-deccatree3-nn-rocketgrowth-inventory-main-app-lib-__init__.py-2026-04-22T04_41_26.719Z.txt  requirements.txt
.devcontainer/: devcontainer.json
app/: .gitignore  README.md  alembic.ini  app.py  pyproject.toml  ruff.toml
app/.streamlit/: SETUP_SECRETS.md  config.toml  secrets.toml.example
app/lib/: config.py  coupang_result.py  db.py  export.py  file_classifier.py  master_io.py  models.py  outbound.py  pallet.py  pallet_assign.py  planning.py  secondary_export.py  verification.py
app/lib/ingestion/: base.py  coupang_file.py  wms_file.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial.py  0002_split_master.py  0003_company_milkrun_meta.py  0004_relax_inbound_plan_meta.py  0005_movement_blob.py  0006_plan_file.py
app/pages/: 1_상품_정보_관리.py  1_제품_마스터.py  2_입고_발주_관리.py  3_재고_현황.py  4_이력_조회.py  5_설정.py
app/scripts/: check_db.py  import_master_from_catalog.py
app/tests/: conftest.py  test_coupang_result.py  test_outbound.py  test_pallet.py  test_pallet_assign.py  test_parsers.py  test_planning.py
