[project]
name = "rocketgrowth-inventory"
version = "0.1.0"
description = "쿠팡 로켓그로스 밀크런 입고 계획 자동화 시스템"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.39",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd==2.0.1",              # .xls 읽기 (Document_*.xls)
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",     # Postgres (Supabase)
    "alembic>=1.13",
    "plotly>=5.24",
    "python-dateutil>=2.9",
    "pydantic>=2.9",
    "requests>=2.32",           # 중기: 쿠팡 API / Slack Webhook
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
